[package]
name = "rmk-typeractive-corne"
version = "0.1.0"
authors = ["Cody Duncan <cody.duncan@live.com>", "Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust - For the Typeractive Corne keyboard"
homepage = "https://github.com/Cody-Duncan/rmk_typeractive_corne"
repository = "https://github.com/Cody-Duncan/rmk_typeractive_corne"
readme = "README.md"
edition = "2024"
license = "MIT"

[dependencies]
rmk = { git = "https://github.com/HaoboGu/rmk", rev = "6b8681f66cdf576948ebab0c79ee6ab2cb561418", features = [
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
] }
nrf-sdc = { git = "https://github.com/haobogu/nrf-sdc", rev = "385e20352d8ad072b6f21b19ab5f289c7f8983ef", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/haobogu/nrf-sdc", rev = "385e20352d8ad072b6f21b19ab5f289c7f8983ef", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.8", features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }

# If this is failing when building on windows, see https://github.com/alexmoon/nrf-sdc/issues/84
# In short, Windows needs to enable developer mode and install git with the "enable symlinks" option enabled 
# in order to allow git to create symlinks between a pair of directories in the nrf-sdc project.
# When that symlink fails to be created, it can't find headers and the C code build fails.
embassy-nrf = { version = "0.10", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
